# quiz-editor

./: .gitignore  README.md  backend.Dockerfile  dev.env  docker-compose.yaml  manage.py  mongo-init.js  pyproject.toml
app/: __init__.py  crud.py  database.py  deps.py  exceptions.py  main.py  models.py  room.py  routes.py  schemas.py
app/core/: __init__.py  _settings.py
app/pydantic_json_patch/: __init__.py  _pointer.py  exceptions.py  op.py
app/routes/: __init__.py  editor.py  room.py  room_management.py
test/: common.py  test_editor.py  test_integration.py  test_room_management.py
